# Embassy-playground-2024

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  TRACK.md  rust-toolchain.toml
.cargo/: config.toml
DEVS/: Using probe-rs info.md
